Update misc tests for JDK7